--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "dependencies": {
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
+        "multer": "^1.4.2",
         "mysql": "^2.18.1",
         "nodemon": "^2.0.4"
     },
     "devDependencies": {
-        "concurrently": "^4.0.1"
+        "concurrently": "^4.0.1",
+        "gh-pages": "^3.1.0"
     }
 }
