Remove npm lock file

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "server": "nodemon server.js",
         "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
         "predeploy": "npm run dev",
-        "deploy": "gh-pages -d dev"
+        "deploy": "gh-pages -d dev",
+        "start": "node app.js"
     },
     "dependencies": {
         "@material-ui/icons": "^4.9.1",
