--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
     "name": "gifticon",
     "version": "1.0.0",
+    "engines": {
+        "node": "12.13.0"
+      },
     "scripts": {
         "client": "cd client && yarn start",
         "server": "nodemon server.js",
         "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
         "predeploy": "npm run dev",
         "deploy": "gh-pages -d dev",
-        "start": "node app.js"
     },
     "dependencies": {
         "@material-ui/icons": "^4.9.1",
@@ -17,7 +19,6 @@
         "mysql": "^2.18.1",
         "nodemon": "^2.0.4"
     },
-    "homepage": "https://uyttyu7532.github.io/react_gifticon/",
     "devDependencies": {
         "concurrently": "^4.0.1",
         "gh-pages": "^3.1.0"
