--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "server": "nodemon server.js",
         "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
         "predeploy": "npm run dev",
-        "deploy": "gh-pages -d dev",
+        "deploy": "gh-pages -d dev"
     },
     "dependencies": {
         "@material-ui/icons": "^4.9.1",
