--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/",
+  "proxy": "https://gifticon-management.herokuapp.com/",
   "homepage": "https://uyttyu7532.github.io/react_gifticon/",
   "devDependencies": {
     "gh-pages": "^3.1.0"
