--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
     "engines": {
         "node": "12.13.0",
         "npm": "6.12.0"
-      },
+    },
     "scripts": {
         "client": "cd client && yarn start",
         "server": "nodemon server.js",
         "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
         "predeploy": "npm run dev",
         "deploy": "gh-pages -d dev",
-        "start" : "yarn server"
+        "start": "yarn server"
     },
     "dependencies": {
         "@material-ui/icons": "^4.9.1",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
+        "heroku-proxy": "^2.1.1",
         "multer": "^1.4.2",
         "mysql": "^2.18.1",
         "nodemon": "^2.0.4"
