--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,6 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
-    "heroku-proxy": "^2.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
@@ -35,7 +34,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://gifticon-management.herokuapp.com/",
+  "proxy": "http://localhost:5000/",
   "homepage": "https://uyttyu7532.github.io/react_gifticon/",
   "devDependencies": {
     "gh-pages": "^3.1.0"
