--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
         "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
         "predeploy": "npm run dev",
         "deploy": "gh-pages -d dev",
-        "start": "yarn server"
+        "start": "nodemon server.js"
     },
     "dependencies": {
         "@material-ui/icons": "^4.9.1",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
-        "heroku-proxy": "^2.1.1",
         "multer": "^1.4.2",
         "mysql": "^2.18.1",
         "nodemon": "^2.0.4"
