--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@material-ui/icons": "^4.9.1",
         "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
         "express": "^4.17.1",
         "multer": "^1.4.2",
         "mysql": "^2.18.1",
