--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "greenlock-express": "^4.0.3",
         "multer": "^1.4.2",
         "mysql": "^2.18.1",
         "nodemon": "^2.0.4"
