--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "greenlock-express": "^4.0.3",
+        "link": "^0.1.5",
         "multer": "^1.4.2",
         "mysql": "^2.18.1",
-        "nodemon": "^2.0.4"
+        "nodemon": "^2.0.4",
+        "react-router-dom": "^5.2.0",
+        "route": "^0.2.5",
+        "router": "^1.3.5"
     },
     "devDependencies": {
         "concurrently": "^4.0.1",
